--- a/docs/csharp/language-reference/compiler-messages/cs1726.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1726.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1726
 ms.assetid: 02b71f22-72f5-42b5-bc9e-1d5dc480cce0
-ms.openlocfilehash: ae743593939bae038747b884aeb9fe6360a4b3cd
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 91ee7e7536c5235751ba0601914eb661c5ed0f34
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33213274"
+ms.lasthandoff: 09/03/2018
+ms.locfileid: "43486690"
 ---
 # <a name="compiler-error-cs1726"></a>컴파일러 오류 CS1726
 Friend 어셈블리 참조 'reference'가 잘못되었습니다. 강력한 이름의 서명된 어셈블리는 InternalsVisibleTo 선언에 공개 키를 지정해야 합니다.  
@@ -46,4 +46,5 @@ class A { }
 ```  
   
 ## <a name="see-also"></a>참고 항목  
- [방법: 서명된 Friend 어셈블리 만들기](../../programming-guide/concepts/assemblies-gac/how-to-create-signed-friend-assemblies.md)
+
+- [방법: 서명된 Friend 어셈블리 만들기](../../programming-guide/concepts/assemblies-gac/how-to-create-signed-friend-assemblies.md)
