--- a/docs/csharp/language-reference/compiler-messages/cs0260.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0260.md
@@ -6,37 +6,39 @@ f1_keywords:
 helpviewer_keywords:
 - CS0260
 ms.assetid: 58e091da-e093-4093-86df-dcd24ffab750
-ms.openlocfilehash: 2306e8266476f311ccf67a8a70a277c2f798f2a5
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 5a41834220da5fb35812b838893d38e515e52f86
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33210119"
+ms.lasthandoff: 09/03/2018
+ms.locfileid: "43486703"
 ---
-# <a name="compiler-error-cs0260"></a><span data-ttu-id="99b1f-102">컴파일러 오류 CS0260</span><span class="sxs-lookup"><span data-stu-id="99b1f-102">Compiler Error CS0260</span></span>
-<span data-ttu-id="99b1f-103">'type' 형식의 선언에 partial 한정자가 없습니다. 형식이 같은 다른 partial 선언이 이미 있습니다.</span><span class="sxs-lookup"><span data-stu-id="99b1f-103">Missing partial modifier on declaration of type 'type'; another partial declaration of this type exists</span></span>  
+# <a name="compiler-error-cs0260"></a><span data-ttu-id="56b70-102">컴파일러 오류 CS0260</span><span class="sxs-lookup"><span data-stu-id="56b70-102">Compiler Error CS0260</span></span>
+
+<span data-ttu-id="56b70-103">'type' 형식의 선언에 partial 한정자가 없습니다. 형식이 같은 다른 partial 선언이 이미 있습니다.</span><span class="sxs-lookup"><span data-stu-id="56b70-103">Missing partial modifier on declaration of type 'type'; another partial declaration of this type exists</span></span>  
   
- <span data-ttu-id="99b1f-104">이 오류는 동일한 이름의 클래스를 여러 개 선언했음을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="99b1f-104">This error indicates that you have declared multiple classes that have the same name.</span></span> <span data-ttu-id="99b1f-105">또한 선언 전체가 아니라 그 중 하나 이상에 `partial` 한정자가 들어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="99b1f-105">In addition, at least one but not all of the declarations contains the `partial` modifier.</span></span> <span data-ttu-id="99b1f-106">여러 부분에 클래스를 선언하려면 키워드 `partial`를 사용하여 각 부분을 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="99b1f-106">If you want to define a class in several parts, you must declare each part by using the keyword `partial`.</span></span>  
+ <span data-ttu-id="56b70-104">이 오류는 동일한 이름의 클래스를 여러 개 선언했음을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="56b70-104">This error indicates that you have declared multiple classes that have the same name.</span></span> <span data-ttu-id="56b70-105">또한 선언 전체가 아니라 그 중 하나 이상에 `partial` 한정자가 들어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="56b70-105">In addition, at least one but not all of the declarations contains the `partial` modifier.</span></span> <span data-ttu-id="56b70-106">여러 부분에 클래스를 선언하려면 키워드 `partial`를 사용하여 각 부분을 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="56b70-106">If you want to define a class in several parts, you must declare each part by using the keyword `partial`.</span></span>  
   
- <span data-ttu-id="99b1f-107">이 오류는 클래스를 선언하고 동일한 네임스페이스의 다른 부분에 선언된 partial 클래스와 동일한 이름을 해당 클래스에 실수로 지정하는 경우 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="99b1f-107">This error also occurs if you declare a class and accidentally give it the same name as a partial class that's declared elsewhere in the same namespace.</span></span>  
+ <span data-ttu-id="56b70-107">이 오류는 클래스를 선언하고 동일한 네임스페이스의 다른 부분에 선언된 partial 클래스와 동일한 이름을 해당 클래스에 실수로 지정하는 경우 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="56b70-107">This error also occurs if you declare a class and accidentally give it the same name as a partial class that's declared elsewhere in the same namespace.</span></span>  
   
- <span data-ttu-id="99b1f-108">다음 샘플에서는 CS0260을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="99b1f-108">The following sample generates CS0260:</span></span>  
-  
-```csharp  
+ <span data-ttu-id="56b70-108">다음 샘플에서는 CS0260을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="56b70-108">The following sample generates CS0260:</span></span>  
+
+```csharp
 // CS0260.cs  
-// You must mark both parts of the definition of class C   
+// You must mark both parts of the definition of class C
 // by using the partial keyword.  
   
 // The following line causes CS0260. To resolve the error, add  
 // the 'partial' keyword to the declaration.  
-class C    
+class C
 {  
 }  
   
 partial class C  
 {  
 }  
-```  
-  
-## <a name="see-also"></a><span data-ttu-id="99b1f-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="99b1f-109">See Also</span></span>  
- [<span data-ttu-id="99b1f-110">Partial 클래스 및 메서드</span><span class="sxs-lookup"><span data-stu-id="99b1f-110">Partial Classes and Methods</span></span>](../../../csharp/programming-guide/classes-and-structs/partial-classes-and-methods.md)
+```
+
+## <a name="see-also"></a><span data-ttu-id="56b70-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="56b70-109">See Also</span></span>
+
+- [<span data-ttu-id="56b70-110">Partial 클래스 및 메서드</span><span class="sxs-lookup"><span data-stu-id="56b70-110">Partial Classes and Methods</span></span>](../../../csharp/programming-guide/classes-and-structs/partial-classes-and-methods.md)
