--- a/docs/visual-basic/misc/bc36535.md
+++ b/docs/visual-basic/misc/bc36535.md
@@ -1,5 +1,5 @@
 ---
-title: 인스턴스 멤버 및 &#39;Me&#39; 쿼리 식에 사용할 수 없습니다
+title: 인스턴스 멤버 및 &#39;Me&#39; 쿼리 식에서 사용할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36535
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36535
 ms.assetid: afb5281b-70a7-48c7-a46d-39522b96b1ff
-ms.openlocfilehash: 8d8e874c7521fa2c9c6831f7c6368cfc37212fcd
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.openlocfilehash: edc455d17fa518fd054bcff5e79db0e94d8eea98
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
+ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630486"
+ms.lasthandoff: 09/03/2018
+ms.locfileid: "43489710"
 ---
-# <a name="instance-members-and-39me39-cannot-be-used-in-a-query-expression"></a>인스턴스 멤버 및 &#39;Me&#39; 쿼리 식에 사용할 수 없습니다
+# <a name="instance-members-and-39me39-cannot-be-used-in-a-query-expression"></a>인스턴스 멤버 및 &#39;Me&#39; 쿼리 식에서 사용할 수 없습니다.
 `Structure` 의 LINQ 쿼리에는 `Me` 에 대한 참조 또는 구조체의 인스턴스 멤버에 대한 참조가 있습니다. `Me` 또는 인스턴스 멤버에 대한 참조는 `Structure`내의 쿼리 식에서 허용되지 않습니다.  
   
  **오류 ID:** BC36535  
@@ -44,4 +44,4 @@ End Structure
  [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
  [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)  
  [Me](~/docs/visual-basic/programming-guide/program-structure/me-my-mybase-and-myclass.md#me)  
- [구조체 (Visual Basic)](http://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)
+ [구조체 (Visual Basic)](https://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)
