--- a/docs/visual-basic/misc/bc36535.md
+++ b/docs/visual-basic/misc/bc36535.md
@@ -1,5 +1,5 @@
 ---
-title: 인스턴스 멤버 및 &#39;Me&#39; 쿼리 식에 사용할 수 없습니다
+title: 인스턴스 멤버 및 &#39;Me&#39; 쿼리 식에서 사용할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36535
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC36535
 ms.assetid: afb5281b-70a7-48c7-a46d-39522b96b1ff
-ms.openlocfilehash: 8d8e874c7521fa2c9c6831f7c6368cfc37212fcd
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.openlocfilehash: edc455d17fa518fd054bcff5e79db0e94d8eea98
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
+ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630486"
+ms.lasthandoff: 09/03/2018
+ms.locfileid: "43489710"
 ---
-# <a name="instance-members-and-39me39-cannot-be-used-in-a-query-expression"></a><span data-ttu-id="1b944-102">인스턴스 멤버 및 &#39;Me&#39; 쿼리 식에 사용할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="1b944-102">Instance members and &#39;Me&#39; cannot be used in a query expression</span></span>
-<span data-ttu-id="1b944-103">`Structure` 의 LINQ 쿼리에는 `Me` 에 대한 참조 또는 구조체의 인스턴스 멤버에 대한 참조가 있습니다.</span><span class="sxs-lookup"><span data-stu-id="1b944-103">A LINQ query in a `Structure` includes a reference to `Me` or to an instance member of the structure.</span></span> <span data-ttu-id="1b944-104">`Me` 또는 인스턴스 멤버에 대한 참조는 `Structure`내의 쿼리 식에서 허용되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="1b944-104">References to `Me` or instance members are not allowed in query expressions within a `Structure`.</span></span>  
+# <a name="instance-members-and-39me39-cannot-be-used-in-a-query-expression"></a><span data-ttu-id="14dd0-102">인스턴스 멤버 및 &#39;Me&#39; 쿼리 식에서 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="14dd0-102">Instance members and &#39;Me&#39; cannot be used in a query expression</span></span>
+<span data-ttu-id="14dd0-103">`Structure` 의 LINQ 쿼리에는 `Me` 에 대한 참조 또는 구조체의 인스턴스 멤버에 대한 참조가 있습니다.</span><span class="sxs-lookup"><span data-stu-id="14dd0-103">A LINQ query in a `Structure` includes a reference to `Me` or to an instance member of the structure.</span></span> <span data-ttu-id="14dd0-104">`Me` 또는 인스턴스 멤버에 대한 참조는 `Structure`내의 쿼리 식에서 허용되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="14dd0-104">References to `Me` or instance members are not allowed in query expressions within a `Structure`.</span></span>  
   
- <span data-ttu-id="1b944-105">**오류 ID:** BC36535</span><span class="sxs-lookup"><span data-stu-id="1b944-105">**Error ID:** BC36535</span></span>  
+ <span data-ttu-id="14dd0-105">**오류 ID:** BC36535</span><span class="sxs-lookup"><span data-stu-id="14dd0-105">**Error ID:** BC36535</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1b944-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1b944-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="14dd0-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="14dd0-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="1b944-107">다음 예제와 같이 `Me` 에 대한 참조에서 반환된 값 또는 인스턴스 멤버의 복사본을 만들고 쿼리 식에서 복사본을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="1b944-107">Create a copy of the instance member or the value returned by the reference to `Me` and use the copy in the query expression, as shown in the following example.</span></span>  
+1.  <span data-ttu-id="14dd0-107">다음 예제와 같이 `Me` 에 대한 참조에서 반환된 값 또는 인스턴스 멤버의 복사본을 만들고 쿼리 식에서 복사본을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="14dd0-107">Create a copy of the instance member or the value returned by the reference to `Me` and use the copy in the query expression, as shown in the following example.</span></span>  
   
 ```vb  
 Structure SampleStructure  
@@ -40,8 +40,8 @@ Structure SampleStructure
 End Structure  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="1b944-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="1b944-108">See Also</span></span>  
- [<span data-ttu-id="1b944-109">Visual Basic의 LINQ 소개</span><span class="sxs-lookup"><span data-stu-id="1b944-109">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
- [<span data-ttu-id="1b944-110">LINQ</span><span class="sxs-lookup"><span data-stu-id="1b944-110">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)  
- [<span data-ttu-id="1b944-111">Me</span><span class="sxs-lookup"><span data-stu-id="1b944-111">Me</span></span>](~/docs/visual-basic/programming-guide/program-structure/me-my-mybase-and-myclass.md#me)  
- [<span data-ttu-id="1b944-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="1b944-112">Structure (Visual Basic)</span></span>](http://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)
+## <a name="see-also"></a><span data-ttu-id="14dd0-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="14dd0-108">See Also</span></span>  
+ [<span data-ttu-id="14dd0-109">Visual Basic의 LINQ 소개</span><span class="sxs-lookup"><span data-stu-id="14dd0-109">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
+ [<span data-ttu-id="14dd0-110">LINQ</span><span class="sxs-lookup"><span data-stu-id="14dd0-110">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)  
+ [<span data-ttu-id="14dd0-111">Me</span><span class="sxs-lookup"><span data-stu-id="14dd0-111">Me</span></span>](~/docs/visual-basic/programming-guide/program-structure/me-my-mybase-and-myclass.md#me)  
+ [<span data-ttu-id="14dd0-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="14dd0-112">Structure (Visual Basic)</span></span>](https://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)
